plugins {
    id 'idea'
    id 'eclipse'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.78'
}

version = "${version_major}.${version_minor}.${version_patch}"
group = "snownee.research"
base {
    archivesName = "ResearchTable"
}

if (System.getenv().BUILD_NUMBER != null) {
    version += "-build${System.getenv().BUILD_NUMBER}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
    // Plugin dependencies disabled during migration. Kept for reference.
    /*
    maven {
        name = "jei"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = 'tterrag maven'
        url = "https://maven.tterrag.com/"
    }
    maven {
        url = "https://www.cursemaven.com"
    }
    */

    maven {
        name = "CraftTweaker"
        url = "https://maven.blamejared.com/"
    }

    maven {
        name = "The One Probe"
        url "https://maven.k-4u.nl"
    }

    maven {
        name = "curse maven"
        url = "https://www.cursemaven.com"
    }
}

neoForge {
    version = "${neoforge_version}"

    runs {
        client {
            client()
        }
        server {
            server()
            programArgument '--nogui'
        }
        data {
            data()
        }
    }

    mods {
        researchtable {
            sourceSet sourceSets.main
        }
    }
}

dependencies {
    compileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    runtimeOnly "curse.maven:kiwi-303657:8110292"
    implementation "curse.maven:architectury-api-419699:5786327"
    implementation "curse.maven:astage-1120180:8010695"
    implementation "curse.maven:ftb-library-404465:7746959"
    implementation "curse.maven:ftb-team-404468:7878281"
    implementation "curse.maven:jade-324717:7545219"

    implementation "mcjty.theoneprobe:theoneprobe:${top_version}"
    implementation "com.blamejared.crafttweaker:CraftTweaker-neoforge-${minecraft_version}:${crafttweaker_version}"
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version,
            neoforge_version : neoforge_version,
            mod_version      : project.version
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    exclude "**/*.bat"
    exclude "**/*.psd"
    exclude "**/*.d"
    exclude "**/*.exe"
    exclude "**/*.e"
    exclude "**/*.txt"
    manifest {
        attributes 'Maven-Artifact': "${project.group}:${project.base.archivesName.get()}:${project.version}"
        attributes 'Timestamp': System.currentTimeMillis()
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

javadoc {
    options.encoding = "UTF-8"
    options.charSet = "UTF-8"
}
